# BADIA_backend

./: .gitignore  ETAG_STRATEGY.md  README.md  alembic.ini  check_user.py  config.py  create_tables.py  database.py  email_service.py  email_tokens.py  issues.txt  main.py  payment_endpoints.md  populate_email_metrics.py  pyproject.toml  r2_client.py  register.py  requirements.txt  security.py  summary.md  test_email.py  update_email_metrics.md
alembic/: env.py
alembic/versions/: 027ff0a2e65b_baseline.py  5dc8882d8c63_add_index_users_current_plan_id.py  6c9e738cef59_remove_payments_this_month_and_revenue_.py  8e25a887736f_add_indexes_to_users_payments_reviews.py  94403a410b95_rename_userfile_to_user_files.py  e2c2c5671e78_add_dashboard_metrics_table.py  edb75093d354_update_schema.py  fc9e00de3dfc_add_user_index.py
api/: dependencies.py  etag.py
api/v1/: plan.py  requests.py  reviews.py  submit_request.py  user_files.py  users.py
api/v1/admin/: __init__.py  dashboard.py  payments.py  plans.py  requests.py  reviews.py  storage.py  users.py
api/v1/auth/: admin.py  email_auth.py  email_service.py  google_auth.py  login.py  register.py
cache/: dashboard.py  emails.py  etags.py  payments.py  plans.py  redis.py  requests.py  reviews.py  storage.py  user.py
crud/: admin.py  dashboard_metrics.py  email_metric.py  files.py  metrics.py  payment.py  plan.py  request.py  review.py  revoked_token.py  user.py
database/: session.py
models/: UserFile.py  __init__.py  dashboard_metrics.py  email_metric.py  emails_track.py  payment.py  plan.py  request.py  review.py  revoked_token.py  user.py  user_file.py
schemas/: FileResponse.py  admin.py  auth.py  files.py  payment.py  plan.py  request.py  review.py  user.py
tests/: conftest.py  metrics_test.py  test_filenames.py  test_user.py  users_test.py
