[project]
name = "badia-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.128.0",
    "google-auth>=2.53.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.3",
    "python-jose>=3.5.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.46.0",
]
