[project]
name = "badia-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "boto3>=1.43.14",
    "fastapi[standard]>=0.128.0",
    "google-auth>=2.53.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.3",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.28",
    "requests>=2.34.2",
    "resend>=2.30.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.46.0",
]
