[project]
name = "badia-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.14",
    "fastapi[standard]>=0.128.0",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.3",
    "pytest>=9.1.1",
    "python-multipart>=0.0.28",
    "reportlab>=4.5.1",
    "resend>=2.30.1",
    "sentry-sdk>=2.60.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]